feat(governance): add M2 release publishing and rollback
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)
